2007-08-20    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm: FIXED page title regex

2007-05-20    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/ES.pm (_result_count_regex): fixed result-count parsing

	* lib/WWW/Search/Ebay/DE.pm (_process_date_abbrevs): fixed date parsing

2007-01-29    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (result_as_HTML): now takes an optional date format argument

2007-01-26    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (result_as_HTML): added end-time to "ended" items

2006-12-24    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (result_as_HTML): added "add to myEbay" link

2006-09-03    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (whitespace_pattern): new method

	* lib/WWW/Search/Ebay/ES.pm: new backend

	* lib/WWW/Search/Ebay/FR.pm: new backend

	* lib/WWW/Search/Ebay/IT.pm: new backend

2006-08-25    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/DE.pm: new backend

	* lib/WWW/Search/Ebay.pm (_process_date_abbrevs): new method
	(_result_count_regex): new method
	(_next_text): new method

2006-06-14    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_shipping): replace stub method with actual code! (as suggested by John Baleshiski 8-)

2006-04-22    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (_bidamount_as_text): new private method
	(_bidcount_as_text): new private method
	(result_as_HTML): new method
	(parse_price): set sold() on results (as suggested by Nick Lokkju)
	(_parse_category_list): new private method

2006-04-21    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (_bid_as_text): new method
	(result_as_HTML): new method

2006-03-22    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): don't use the Switch module

2006-03-11    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_enddate): now can take a string argument

2006-02-18    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): enhanced to parse Completed listings

2005-12-27    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/ByBidderID.pm: new backend!
