@@ -1,12 +1,15 @@
 --- 
-author: Martin Thurn <mthurn@cpan.org>
+author: 
+  - Martin Thurn <mthurn@cpan.org>
 build_requires: 
   Bit::Vector: 0
+  Date::Manip: 0
   IO::Capture::Stderr: 0
   Test::More: 0
+  Test::Pod: 0
   WWW::Search::Test: 2.265
 distribution_type: module
-generated_by: Module::Install version 0.67
+generated_by: Module::Install version 0.68
 license: perl
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
@@ -23,4 +26,4 @@ requires:
   WWW::Search: 2.529
   WWW::SearchResult: 2.067
   perl: 5.005
-version: 2.231
+version: 2.232
